--- a/manifest.json
+++ b/manifest.json
@@ -12,13 +12,13 @@
   },
   "permissions": ["contextMenus", "tabs"],
   "background": {
-    "scripts": ["test.js", "jquery.js", "jszip.min.js","jszip-utils.min.js"]
+    "scripts": [ "jquery.js", "jszip.min.js","jszip-utils.min.js"]
   },
 
   "content_scripts": [ {
-    "js": [ "test.js","js/jquery.js", "js/jquery.watch-2.0.min.js", "js/init.js", "jszip.min.js","jszip-utils.min.js","js/opensubtitles.js", "js/jquery.xmlrpc.min.js"],
+    "js": [ "js/jquery.js", "js/jquery.watch-2.0.min.js", "js/init.js", "jszip.min.js","jszip-utils.min.js","js/opensubtitles.js", "js/jquery.xmlrpc.min.js"],
     "css" : ["style.css"],
-    "matches": [ "*://xmovies8.co/*", "*://dl.opensubtitles.org/*", "*://hdtvshows.net/*", "*://yify.tv/*", "*://www.youtube.com/*" ]
+    "matches": [ "*://xmovies8.co/*", "*://dl.opensubtitles.org/*", "*://hdtvshows.net/*", "*://*.googlevideo.com/*" ]
     } ],
 
     "web_accessible_resources": ["images/*.gif"],
